--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ body {
 
 .currency-icons {
     position: relative;
-    width: 50px;
+    width: 60px;
     height: 36px;
 }
 
@@ -195,6 +195,7 @@ body {
 
 .rate-change {
     text-align: right;
+    min-width: 80px;
 }
 
 .rate-value {
@@ -205,7 +206,7 @@ body {
 
 .rate-percent {
     font-size: 12px;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: flex-end;
     gap: 4px;
